# finemans_algorithm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_test.yml
algorithm/: betweenness_reduction.py  utils.py
src/: weight_type.py
src/fineman/: __init__.py  betweenness_reduction.py  core_functions.py  dijkstra.py  elimination_algorithm.py  elimination_by_hop_reduction.py  finemans_algorithm.py  heavy_light_partition.py  helper_functions.py  independent_set_or_crust.py  main.py  preprocessing.py  rand_is.py
src/scripts/: __init__.py  bellman_ford.py  double_tree_graph_generator.py  random_graph_no_neg_cycles_gen.py  synthetic_graph_generator.py  time_algorithms.py  visualize_times.py
src/tests/: test_betweenness_reduction.py  test_core_functions.py  test_elimination_by_hop_reduction.py  test_finemans_algorithm.py  test_heavy_light_partition.py  test_helper_functions.py  test_is_or_crust.py  test_preprocessing.py  test_rand_is.py
src/tests/test_data/: graph_already_adhere_to_one_degree_restriction.json  graph_with_neg_cycle.json  graph_with_neg_edges.json  graph_with_no_edges.json  negative_cycle_6.json  path_tricky.json  path_with_only_neg_edges.json  small_example_1.json  small_flow_dag.json  small_tree.json  tree_graph_single_root_with_100_children.json  tree_graph_single_root_with_7_children.json  tree_graph_two_layered_negative_root.json
src/tests/test_data/graphs/: dag_flow.json  (+25 more)
src/tests/test_scripts/: test_standard_bellmanford.py
src/utils/: __init__.py  cycle_error.py  load_test_case.py
